Revert "(test) Fixes image resizing on mobile IE"
This reverts commit 26867d98f742cda9ba35a9da61c840558900d405.

--- a/css/widgets.less
+++ b/css/widgets.less
@@ -1099,8 +1099,7 @@
 		display: block;
 		text-align: center;
 		img {
-			display: block;
-			max-width: 100%;
+			display: inline-block;
 		}
 	}
 	span.image-title {
